Fix but on overflowed navbar of tinymce toolbar

--- a/theme/admin/static/js/tinymce/skins/lightgray/TinyMCE.less
+++ b/theme/admin/static/js/tinymce/skins/lightgray/TinyMCE.less
@@ -8,7 +8,7 @@
 	border: 0; padding: 0; margin: 0;
 	overflow: hidden;
 	height: 100%;
-	z-index: 100;
+	z-index: 1000;
 }
 
 div.@{prefix}-fullscreen {
