--- a/theme/admin/static/js/tinymce/skins/lightgray/skin.less
+++ b/theme/admin/static/js/tinymce/skins/lightgray/skin.less
@@ -328,7 +328,7 @@
 	border: 0; padding: 0; margin: 0;
 	overflow: hidden;
 	height: 100%;
-	z-index: 100;
+	z-index: 1000;
 }
 
 div.@{prefix}-fullscreen {
